# swagger.json
@@ -8,6 +8,18 @@
   "servers": [
     { "url": "http://localhost:3000" }
   ],
+  "components": {
+    "securitySchemes": {
+      "bearerAuth": {
+        "type": "http",
+        "scheme": "bearer",
+        "bearerFormat": "JWT"
+      }
+    }
+  },
+  "security": [
+    { "bearerAuth": [] }
+  ],
   "paths": {
     "/users/register": {
       "post": {
@@ -87,6 +99,7 @@
     "/transfers": {
       "post": {
         "summary": "Realizar transferência",
+        "security": [{ "bearerAuth": [] }],
         "requestBody": {
           "required": true,
           "content": {
@@ -110,13 +123,16 @@
         },
         "responses": {
           "201": { "description": "Transferência realizada" },
-          "400": { "description": "Erro de validação" }
+          "400": { "description": "Erro de validação" },
+          "401": { "description": "Token não fornecido ou inválido" }
         }
       },
       "get": {
         "summary": "Listar transferências",
+        "security": [{ "bearerAuth": [] }],
         "responses": {
-          "200": { "description": "Lista de transferências" }
+          "200": { "description": "Lista de transferências" },
+          "401": { "description": "Token não fornecido ou inválido" }
         }
       }
     }
